# Webserv

./: CMakeLists.txt  Makefile  browser_test.txt  debug_upload.py  main.cpp  readme.md  stress_test.py  webserv  webserv.hpp
config/: NGINX.conf  PILA.conf  banana_tester.conf  default.conf  real_nginx.conf  webserv.conf
docs/: config_helper.txt  todo.txt
errors/400/: 400.html
errors/404/: 404.css  404.html
include/: type.hpp  webserv.hpp
source/: main.cpp
source/cgi/: CGIHandler.cpp  CGIHandler.hpp  cgi_handler.cpp  main.cpp
source/config/: ConfigServerParser.cpp  ConfigTokenUtils.cpp  ServerParser.cpp  ServerParser.hpp  Tokenizer.cpp  Tokenizer.hpp  config.cpp  config.hpp  config_location_parser.cpp  config_server_parser.cpp  config_token_utils.cpp  tokenizer.cpp  tokenizer.hpp
source/connection/: epoll.cpp  socket.cpp  socket.hpp
source/epoll/: epoll.cpp  epoll.hpp
source/request/: request.hpp
source/server/: ErrorPage.hpp  Request.cpp  Request.cpp#  Request.hpp  Request.hpp#  Response.cpp  Response.hpp  Response.hpp#  server.cpp  server.hpp
source/socket/: socket.cpp  socket.hpp
src/: main.cpp
src/cgi/: CGIHandler.cpp  CgiUtil.cpp  CgiUtil.hpp  cgi_test.py  main.cpp
src/config/: Config.cpp  Config.hpp  Server.cpp  Server.hpp  Tokenizer.hpp
src/connection/: Socket.cpp  Socket.hpp  connection.hpp  epoll.cpp
src/cookie/: cookie.cpp  cookie.hpp
src/http/: HttpHandler.cpp  HttpHandler.hpp  LocationMatcher.cpp  LocationMatcher.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
uploads/: readme.md
www/: index.html  index_old.html  style.css
www/api/: api.html
(+43 files in other folders)
